# discord-music-bot

./: .env  .gitignore  README.md  discord-music-bot.code-workspace  main.py  pyproject.toml  requirements.txt  setup.py
bot/: bot.py  download.py  handle_url.py  path.py  uploader.py  zipfile.py
src/: bot.py  download.py  exceptions.py  uploader.py  zipfile.py
