[tool.poetry]
name = "discord-music-bot"
version = "0.1.0"
description = ""
authors = ["Captain Jack Sparrow <dont@spam.me>"]
readme = "README.md"
packages = [{include = "Bot", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.22"
logging = "^0.4.9"
streamrip = "^1.9.7"
urllib3 = "^2.0.7"
validators="^0.22.0"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
discord = "^2.3.2"
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
